Make sure proof caching dialog displays right goal