@@ -3,6 +3,7 @@ package de.uka.ilkd.key.gui.plugins.caching;
 import java.awt.*;
 import java.util.Collections;
 import java.util.List;
+import java.util.stream.Collectors;
 import javax.swing.*;
 import javax.swing.event.TableModelEvent;
 import javax.swing.event.TableModelListener;
@@ -24,9 +25,9 @@ class ReferenceSearchTable extends JTable implements TableModel {
      */
     private final KeYMediator mediator;
     /**
-     * List of open goals in the selected proof.
+     * List of open and closed goals in the selected proof.
      */
-    private final List<Goal> openGoals;
+    private final List<Goal> goals;
 
     /**
      * Construct a new table.
@@ -36,8 +37,10 @@ class ReferenceSearchTable extends JTable implements TableModel {
      */
     public ReferenceSearchTable(Proof proof, KeYMediator mediator) {
         this.setModel(this);
-        this.openGoals = proof.openGoals().toList();
-        Collections.reverse(this.openGoals);
+        this.goals = proof.allGoals().stream()
+                .filter(g -> !g.node().isClosed() || g.node().lookup(ClosedBy.class) != null)
+                .collect(Collectors.toList());
+        Collections.reverse(this.goals);
         this.mediator = mediator;
         getColumnModel().getColumn(1).setMinWidth(200);
     }
@@ -60,7 +63,7 @@ class ReferenceSearchTable extends JTable implements TableModel {
 
     @Override
     public int getRowCount() {
-        return openGoals.size();
+        return goals.size();
     }
 
     @Override
@@ -88,9 +91,9 @@ class ReferenceSearchTable extends JTable implements TableModel {
     @Override
     public Object getValueAt(int row, int column) {
         if (column == 0) {
-            return String.valueOf(openGoals.get(row).node().serialNr());
+            return String.valueOf(goals.get(row).node().serialNr());
         } else {
-            Goal g = openGoals.get(row);
+            Goal g = goals.get(row);
             ClosedBy c = g.node().lookup(ClosedBy.class);
             if (c == null) {
                 return "no reference found";
